@@ -1,2 +1,3 @@
 #!/bin/sh
+
 pg_buildext installcheck
