@@ -1,2 +1,2 @@
-#version=4
-#https://github.com/@SOURCE@/@SOURCE@/releases .*/v(.*).tar.gz
+version=4
+@URL@/releases .*/(.*).tar.gz
